--- a/assets/style.css
+++ b/assets/style.css
@@ -1,15 +1,15 @@
-#body {
-    background-color:darkturquoise
-}
+
+body::-webkit-scrollbar{
+    display: none;
+  }
 
 #main {
     height: 100%;
-        background-image: url(./nba-wall.jpeg) ;
-        background-position: center center;
-        background-repeat:  no-repeat;
-        background-attachment: fixed;
-        background-size:  cover;
-        background-color: #e9c84f;
+    background-image: url(./nba-wall.jpeg);
+    background-position: inherit;
+    background-repeat:inherit;
+    background-attachment: revert;
+    background-size: contain;
 };
 
 
